--- a/test.ipynb
+++ b/test.ipynb
@@ -2,12 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Input,Permute, Reshape, Conv2D, BatchNormalization, Activation,Add,AveragePooling2D,Flatten,Dense"
+    "from tensorflow.keras.layers import Input,Permute, Reshape, Conv2D, BatchNormalization, Activation,Add,AveragePooling2D,Flatten,Dense\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import argparse\n",
+    "parser = argparse.ArgumentParser(description='Parser')\n",
+    "parser.add_argument('epochs',type=int,default=2)\n",
+    "#TODO\n",
+    "args = parser.parse_args()"
    ]
   },
   {
@@ -78,6 +92,62 @@
     "    \n",
     "    return tf.keras.Model(input=input,output=x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cifar_10():\n",
+    "\n",
+    "    (x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
+    "\n",
+    "    return\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tf.function\n",
+    "def train_step(model,data):\n",
+    "    #TODO\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        pass\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model,dataset,args):\n",
+    "    steps_per_epoch = dataset.size // args.batch_size\n",
+    "    train_iter=iter(dataset)\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    for epoch in range(args.epochs):\n",
+    "        print(f\"Starting epoch {epoch}\")\n",
+    "        start_time_epoch = time.time()\n",
+    "\n",
+    "        for step in range(steps_per_epoch):\n",
+    "            train_step(model,next(train_iter))\n",
+    "            \n",
+    "        print(f\"Epoch {epoch} took {time.time()-start_time_epoch} total elapsed time {time.time()-start_time}\")"
+   ]
   }
  ],
  "metadata": {
@@ -90,7 +160,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4
