shuffled data and calculate nll

--- a/test.ipynb
+++ b/test.ipynb
@@ -113,20 +113,25 @@
    "outputs": [],
    "source": [
     "@tf.function\n",
-    "def train_step(model,data):\n",
+    "def train_step(model,data,args):\n",
     "    #TODO\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        pass\n",
+    "    imgs, labels = data\n",
+    "    batch_size = tf.shape(imgs)[0]\n",
+    "    batch_rep = tf.tile(tf.range(batch_size),[args.batch_rep])\n",
+    "    shuffled_batch_rep = tf.shuffle(batch_rep)\n",
+    "    input_shuffle=tf.cast(tf.cast(batch_size,tf.float32) * (1. - args.inp_rep_prob),tf.int32)\n",
+    "    #Kan detta göras bättre?\n",
+    "    shuffle_idxs = [tf.concat([tf.random.shuffle(shuffled_batch_rep[:input_shuffle]), input_shuffle[input_shuffle:]], axis=0) for _ in range(args.ensemble_size)]\n",
+    "    imgs = tf.stack([tf.gather(imgs, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
+    "    labels = tf.stack([tf.gather(labels, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
     "\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        logits = model(imgs, training=True)\n",
+    "        nll = tf.reduce_mean(tf.reduce_sum(tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True), axis=1))\n",
+    "\n",
+    "        \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
