train_step done

--- a/test.ipynb
+++ b/test.ipynb
@@ -113,8 +113,7 @@
    "outputs": [],
    "source": [
     "@tf.function\n",
-    "def train_step(model,data,args):\n",
-    "    #TODO\n",
+    "def train_step(model,data,optimizer,args):\n",
     "    imgs, labels = data\n",
     "    batch_size = tf.shape(imgs)[0]\n",
     "    batch_rep = tf.tile(tf.range(batch_size),[args.batch_rep])\n",
@@ -129,7 +128,12 @@
     "        logits = model(imgs, training=True)\n",
     "        nll = tf.reduce_mean(tf.reduce_sum(tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True), axis=1))\n",
     "\n",
-    "        \n",
+    "        loss = nll + sum(model.losses) #Does this include regularisation?\n",
+    "\n",
+    "    grads = tape.gradient(loss, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
+    "\n",
+    "\n",
     "    "
    ]
   },
