testing with custom loss and model

--- a/test_loss.ipynb
+++ b/test_loss.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import Input,Permute, Reshape, Conv2D, BatchNormalization, Activation,Add,AveragePooling2D,Flatten,Dense\n",
     "import time\n",
-    "from tensorflow.keras.regularizers import l2,l1_l2"
+    "from tensorflow.keras.regularizers import l2,l1_l2\n",
+    "from tensorflow.keras.losses import Loss"
    ]
   },
   {
@@ -23,6 +24,43 @@
     "parser.add_argument('epochs',type=int,default=2)\n",
     "#TODO\n",
     "args = parser.parse_args()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomModel(tf.keras.Model):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        #TODO\n",
+    "\n",
+    "    def train_step(self, data):\n",
+    "        imgs, labels = data\n",
+    "        batch_size = tf.shape(imgs)[0]\n",
+    "        batch_rep = tf.tile(tf.range(batch_size),[args.batch_rep])\n",
+    "        shuffled_batch_rep = tf.shuffle(batch_rep)\n",
+    "        input_shuffle=tf.cast(tf.cast(batch_size,tf.float32) * (1. - args.inp_rep_prob),tf.int32)\n",
+    "        #Kan detta göras bättre?\n",
+    "        shuffle_idxs = [tf.concat([tf.random.shuffle(shuffled_batch_rep[:input_shuffle]), input_shuffle[input_shuffle:]], axis=0) for _ in range(args.ensemble_size)]\n",
+    "        imgs = tf.stack([tf.gather(imgs, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
+    "        labels = tf.stack([tf.gather(labels, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
+    "\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            logits = self(imgs, training=True)\n",
+    "            loss = self.compiled_loss(\n",
+    "                labels,\n",
+    "                imgs,\n",
+    "                regularization_losses=self.losses,\n",
+    "            )\n",
+    "\n",
+    "\n",
+    "        grads = tape.gradient(loss, model.trainable_variables)\n",
+    "        optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
+    "\n",
+    "        return super().train_step(data)"
    ]
   },
   {
@@ -61,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +129,22 @@
     "    x = Dense(n_classes*ensemble_size,kernel_initializer='he_normal',activation=None,kernel_regularizer=l1_l2(l1=l_1*ensemble_size,l2=l_2*ensemble_size),bias_regularizer=l1_l2(l1=l_1*ensemble_size,l2=l_2*ensemble_size))(x)\n",
     "    x = Reshape([batch_size,ensemble_size,n_classes])(x)\n",
     "    \n",
-    "    return tf.keras.Model(input=input,output=x)"
+    "    return tf.keras.CusomModel(input=input,output=x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NLL(Loss):\n",
+    "\n",
+    "    def call(self, y_true, y_pred):\n",
+    "        y_pred = tf.convert_to_tensor_v2(y_pred)\n",
+    "        y_true = tf.cast(y_true, y_pred.dtype)\n",
+    "        nll = tf.reduce_mean(tf.reduce_sum(tf.keras.losses.sparse_categorical_crossentropy(y_true, y_pred, from_logits=True), axis=1))\n",
+    "        return nll"
    ]
   },
   {
@@ -100,61 +153,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cifar_10():\n",
-    "\n",
-    "    (x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
-    "\n",
-    "    return\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@tf.function\n",
-    "def train_step(model,data,optimizer,args):\n",
-    "    imgs, labels = data\n",
-    "    batch_size = tf.shape(imgs)[0]\n",
-    "    batch_rep = tf.tile(tf.range(batch_size),[args.batch_rep])\n",
-    "    shuffled_batch_rep = tf.shuffle(batch_rep)\n",
-    "    input_shuffle=tf.cast(tf.cast(batch_size,tf.float32) * (1. - args.inp_rep_prob),tf.int32)\n",
-    "    #Kan detta göras bättre?\n",
-    "    shuffle_idxs = [tf.concat([tf.random.shuffle(shuffled_batch_rep[:input_shuffle]), input_shuffle[input_shuffle:]], axis=0) for _ in range(args.ensemble_size)]\n",
-    "    imgs = tf.stack([tf.gather(imgs, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
-    "    labels = tf.stack([tf.gather(labels, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
-    "\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        logits = model(imgs, training=True)\n",
-    "        nll = tf.reduce_mean(tf.reduce_sum(tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True), axis=1))\n",
-    "\n",
-    "        loss = nll + sum(model.losses) #Does this include regularisation?\n",
-    "\n",
-    "    grads = tape.gradient(loss, model.trainable_variables)\n",
-    "    optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
-    "    #TODO track metrics\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train(model,dataset,args):\n",
-    "    steps_per_epoch = dataset.size // args.batch_size\n",
-    "    train_iter=iter(dataset)\n",
-    "\n",
-    "    start_time = time.time()\n",
-    "    for epoch in range(args.epochs):\n",
-    "        print(f\"Starting epoch {epoch}\")\n",
-    "        start_time_epoch = time.time()\n",
-    "\n",
-    "        for step in range(steps_per_epoch):\n",
-    "            train_step(model,next(train_iter))\n",
-    "            \n",
-    "        print(f\"Epoch {epoch} took {time.time()-start_time_epoch} total elapsed time {time.time()-start_time}\")"
+    "optimizer = tf.keras.optimizers.SGD(lr_schedule, momentum=0.9, nesterov=True)\n",
+    "model.compile(optimizer,loss = NLL())\n",
+    "model.fit(x_train,y_train)"
    ]
   }
  ],
