--- a/test_loss.ipynb
+++ b/test_loss.ipynb
@@ -15,36 +15,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import argparse\n",
-    "parser = argparse.ArgumentParser(description='Parser')\n",
-    "parser.add_argument('epochs',type=int,default=2)\n",
-    "#TODO\n",
-    "args = parser.parse_args()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomModel(tf.keras.Model):\n",
-    "    def __init__(self, *args, **kwargs):\n",
+    "    def __init__(self,ensemble_size,batch_rep, inp_rep_prob,*args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
-    "        #TODO\n",
+    "        self.batch_rep = batch_rep\n",
+    "        self.inp_rep_prob = inp_rep_prob\n",
+    "        self.ensemble_size = ensemble_size\n",
     "\n",
     "    def train_step(self, data):\n",
     "        imgs, labels = data\n",
     "        batch_size = tf.shape(imgs)[0]\n",
-    "        batch_rep = tf.tile(tf.range(batch_size),[args.batch_rep])\n",
+    "        batch_rep = tf.tile(tf.range(batch_size),[self.batch_rep])\n",
     "        shuffled_batch_rep = tf.shuffle(batch_rep)\n",
-    "        input_shuffle=tf.cast(tf.cast(batch_size,tf.float32) * (1. - args.inp_rep_prob),tf.int32)\n",
+    "        input_shuffle=tf.cast(tf.cast(batch_size,tf.float32) * (1. - self.inp_rep_prob),tf.int32)\n",
     "        #Kan detta göras bättre?\n",
-    "        shuffle_idxs = [tf.concat([tf.random.shuffle(shuffled_batch_rep[:input_shuffle]), input_shuffle[input_shuffle:]], axis=0) for _ in range(args.ensemble_size)]\n",
+    "        shuffle_idxs = [tf.concat([tf.random.shuffle(shuffled_batch_rep[:input_shuffle]), input_shuffle[input_shuffle:]], axis=0) for _ in range(self.ensemble_size)]\n",
     "        imgs = tf.stack([tf.gather(imgs, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
     "        labels = tf.stack([tf.gather(labels, indxs, axis=0) for indxs in shuffle_idxs], axis=1)\n",
     "\n",
@@ -57,15 +46,26 @@
     "            )\n",
     "\n",
     "\n",
-    "        grads = tape.gradient(loss, model.trainable_variables)\n",
-    "        optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
+    "        grads = tape.gradient(loss, self.trainable_variables)\n",
+    "        optimizer.apply_gradients(zip(grads, self.trainable_variables))\n",
     "\n",
-    "        return super().train_step(data)"
+    "        return #TODO Metrics\n",
+    "\n",
+    "    def test_step(self, data):\n",
+    "        imgs, labels = data\n",
+    "        imgs = tf.tile(tf.expand_dims(imgs, 1), [1, self.ensemble_size, 1, 1, 1]) #Expand to add ensemble dimension\n",
+    "        logits = self(imgs, training=False)\n",
+    "        probs = tf.nn.softmax(logits)\n",
+    "\n",
+    "        probs = tf.math.reduce_mean(probs, axis=1) \n",
+    "\n",
+    "\n",
+    "        return #TODO Metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "    x = BatchNormalization(momentum=0.9,epsilon=1e-5,beta_regularizer=l2(l_2),gamma_regularizer=l2(l_2))(input)\n",
     "    x = Activation('relu')(x)\n",
     "    x = Conv2D(filters,3,strides=strides,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l1_l2(l1=l_1,l2=l_2))(x)\n",
-    "    x = BatchNormalization(momentum=0.9,epsilon=1e-5)(x)\n",
+    "    x = BatchNormalization(momentum=0.9,epsilon=1e-5,beta_regularizer=l2(l_2),gamma_regularizer=l2(l_2))(x)\n",
     "    x = Activation('relu')(x)\n",
     "    x = Conv2D(filters,3,strides=1,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l1_l2(l1=l_1,l2=l_2))(x)\n",
     "    \n",
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wide_resnet(input_shape,d,w_mult,n_classes,l_2=0,l_1=0):\n",
+    "def wide_resnet(input_shape,d,w_mult,n_classes,batch_rep,inp_rep_prob, l_2=0,l_1=0):\n",
     "    n_blocks = (d - 4) // 6\n",
     "    input_shape = list(input_shape)\n",
     "    ensemble_size = input_shape[0]\n",
@@ -129,7 +129,7 @@
     "    x = Dense(n_classes*ensemble_size,kernel_initializer='he_normal',activation=None,kernel_regularizer=l1_l2(l1=l_1*ensemble_size,l2=l_2*ensemble_size),bias_regularizer=l1_l2(l1=l_1*ensemble_size,l2=l_2*ensemble_size))(x)\n",
     "    x = Reshape([batch_size,ensemble_size,n_classes])(x)\n",
     "    \n",
-    "    return tf.keras.CusomModel(input=input,output=x)"
+    "    return tf.keras.CusomModel(ensemble_size, batch_rep,inp_rep_prob ,input=input,output=x)"
    ]
   },
   {
@@ -153,9 +153,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = wide_resnet(input_shape,d,w_mult,n_classes,batch_rep,inp_rep_prob, l_2=0,l_1=0)\n",
+    "lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "    0.1,\n",
+    "    decay_steps=steps_per_epoch,\n",
+    "    decay_rate=0.1)\n",
+    "\n",
     "optimizer = tf.keras.optimizers.SGD(lr_schedule, momentum=0.9, nesterov=True)\n",
     "model.compile(optimizer,loss = NLL())\n",
-    "model.fit(x_train,y_train)"
+    "model.fit(x_train,y_train,batch_size,validation_split=val_split)"
    ]
   }
  ],
