--- a/test_loss.ipynb
+++ b/test_loss.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,17 +69,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def basic_block(input,filters,strides,l_1,l_2):\n",
+    "def basic_block(input,filters,strides,l_2):\n",
     "    y = input\n",
     "    x = BatchNormalization(momentum=0.9,epsilon=1e-5,beta_regularizer=l2(l_2),gamma_regularizer=l2(l_2))(input)\n",
     "    x = Activation('relu')(x)\n",
-    "    x = Conv2D(filters,3,strides=strides,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l1_l2(l1=l_1,l2=l_2))(x)\n",
+    "    x = Conv2D(filters,3,strides=strides,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l2(l_2))(x)\n",
     "    x = BatchNormalization(momentum=0.9,epsilon=1e-5,beta_regularizer=l2(l_2),gamma_regularizer=l2(l_2))(x)\n",
     "    x = Activation('relu')(x)\n",
-    "    x = Conv2D(filters,3,strides=1,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l1_l2(l1=l_1,l2=l_2))(x)\n",
+    "    x = Conv2D(filters,3,strides=1,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l2(l_2))(x)\n",
     "    \n",
     "    if not x.shape.is_compatible_with(y.shape):\n",
-    "        y = Conv2D(filters,1,strides=strides,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l1_l2(l1=l_1,l2=l_2))(input)\n",
+    "        y = Conv2D(filters,1,strides=strides,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l2(l_2))(input)\n",
     "\n",
     "    return Add()([x,y])\n"
    ]
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def res_group(input,filters,strides,n_blocks,l_1,l_2):\n",
+    "def res_group(input,filters,strides,n_blocks,l_2):\n",
     "    x = basic_block(input,filters,strides,l_1,l_2)\n",
     "    for _ in range(n_blocks-1):\n",
     "        x = basic_block(x,filters,1,l_1,l_2)\n",
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wide_resnet(input_shape,d,w_mult,n_classes,batch_rep,inp_rep_prob, l_2=0,l_1=0):\n",
+    "def wide_resnet(input_shape,d,w_mult,n_classes,batch_rep,inp_rep_prob, l_2=0):\n",
     "    n_blocks = (d - 4) // 6\n",
     "    input_shape = list(input_shape)\n",
     "    ensemble_size = input_shape[0]\n",
@@ -115,10 +115,10 @@
     "    x = Reshape(input_shape[1:-1] + [input_shape[-1] * ensemble_size])(x)\n",
     "\n",
     "\n",
-    "    x = Conv2D(16,3,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l1_l2(l1=l_1*ensemble_size,l2=l_2*ensemble_size))(x)\n",
+    "    x = Conv2D(16,3,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l2(l_2))(x)\n",
     "\n",
     "    for strides, filters in zip([1, 2, 2], [16, 32, 64]):\n",
-    "        x = res_group(x,filters*w_mult,strides,n_blocks,l_1,l_2)\n",
+    "        x = res_group(x,filters*w_mult,strides,n_blocks,l_2)\n",
     "\n",
     "    x = BatchNormalization(momentum=0.9,epsilon=1e-5,beta_regularizer=l2(l_2),gamma_regularizer=l2(l_2))(x)\n",
     "    x = Activation('relu')(x)\n",
@@ -126,7 +126,7 @@
     "    x = Flatten()(x)\n",
     "\n",
     "    batch_size = tf.shape(x)[0]\n",
-    "    x = Dense(n_classes*ensemble_size,kernel_initializer='he_normal',activation=None,kernel_regularizer=l1_l2(l1=l_1*ensemble_size,l2=l_2*ensemble_size),bias_regularizer=l1_l2(l1=l_1*ensemble_size,l2=l_2*ensemble_size))(x)\n",
+    "    x = Dense(n_classes*ensemble_size,kernel_initializer='he_normal',activation=None,kernel_regularizer=l2(l_2),bias_regularizer=l2(l_2))(x)\n",
     "    x = Reshape([batch_size,ensemble_size,n_classes])(x)\n",
     "    \n",
     "    return tf.keras.CusomModel(ensemble_size, batch_rep,inp_rep_prob ,input=input,output=x)"
