--- a/test_loss.ipynb
+++ b/test_loss.ipynb
@@ -15,16 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomModel(tf.keras.Model):\n",
-    "    def __init__(self,ensemble_size,batch_rep, inp_rep_prob,*args, **kwargs):\n",
+    "    def __init__(self,ensemble_size,batch_rep, inp_rep_prob,n_classes,*args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        self.batch_rep = batch_rep\n",
     "        self.inp_rep_prob = inp_rep_prob\n",
     "        self.ensemble_size = ensemble_size\n",
+    "        self.n_classes = n_classes\n",
     "\n",
     "    def train_step(self, data):\n",
     "        imgs, labels = data\n",
@@ -49,7 +50,13 @@
     "        grads = tape.gradient(loss, self.trainable_variables)\n",
     "        optimizer.apply_gradients(zip(grads, self.trainable_variables))\n",
     "\n",
-    "        return #TODO Metrics\n",
+    "        probs = tf.nn.softmax(tf.reshape(logits, [-1, self.n_classes]))\n",
+    "        flat_labels = tf.reshape(labels, [-1])\n",
+    "        \n",
+    "        #self.metrics[\"nll\"].update_state() #TODO\n",
+    "        self.metrics[\"accuracy\"].update_state(flat_labels,probs)\n",
+    "\n",
+    "        return {m.name: m.result() for m in self.metrics}\n",
     "\n",
     "    def test_step(self, data):\n",
     "        imgs, labels = data\n",
@@ -57,10 +64,18 @@
     "        logits = self(imgs, training=False)\n",
     "        probs = tf.nn.softmax(logits)\n",
     "\n",
+    "        for i in range(self.ensemble_size):\n",
+    "            member_probs = probs[:,i]\n",
+    "            member_loss = tf.keras.losses.sparse_categorical_crossentropy(labels, member_probs)\n",
+    "            self.metrics[F\"nll_member_{i}\"].update_state(member_loss)\n",
+    "            self.metrics[f\"accuracy_member_{i}\"].update_state(labels,member_probs)\n",
+    "\n",
     "        probs = tf.math.reduce_mean(probs, axis=1) \n",
     "\n",
+    "        self.metrics[\"accuracy\"].update_state(labels,probs)\n",
     "\n",
-    "        return #TODO Metrics"
+    "\n",
+    "        return {m.name: m.result() for m in self.metrics}"
    ]
   },
   {
@@ -91,15 +106,15 @@
    "outputs": [],
    "source": [
     "def res_group(input,filters,strides,n_blocks,l_2):\n",
-    "    x = basic_block(input,filters,strides,l_1,l_2)\n",
+    "    x = basic_block(input,filters,strides,l_2)\n",
     "    for _ in range(n_blocks-1):\n",
-    "        x = basic_block(x,filters,1,l_1,l_2)\n",
+    "        x = basic_block(x,filters,1,l_2)\n",
     "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +144,7 @@
     "    x = Dense(n_classes*ensemble_size,kernel_initializer='he_normal',activation=None,kernel_regularizer=l2(l_2),bias_regularizer=l2(l_2))(x)\n",
     "    x = Reshape([batch_size,ensemble_size,n_classes])(x)\n",
     "    \n",
-    "    return tf.keras.CusomModel(ensemble_size, batch_rep,inp_rep_prob ,input=input,output=x)"
+    "    return CustomModel(ensemble_size, batch_rep,inp_rep_prob, n_classes,input=input,output=x)"
    ]
   },
   {
@@ -153,14 +168,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow.keras.metrics import Mean,SparseCategoricalAccuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = [Mean(name=\"nll\"), SparseCategoricalAccuracy(\"accuracy\")]\n",
+    "\n",
+    "for i in range(ensemble_size):\n",
+    "    metrics.append(Mean(f\"nll_member_{i}\"))\n",
+    "    metrics.append(SparseCategoricalAccuracy(f\"accuracy_member_{i}\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = wide_resnet(input_shape,d,w_mult,n_classes,batch_rep,inp_rep_prob, l_2=0,l_1=0)\n",
+    "\n",
     "lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
     "    0.1,\n",
     "    decay_steps=steps_per_epoch,\n",
     "    decay_rate=0.1)\n",
     "\n",
     "optimizer = tf.keras.optimizers.SGD(lr_schedule, momentum=0.9, nesterov=True)\n",
-    "model.compile(optimizer,loss = NLL())\n",
+    "\n",
+    "model.compile(optimizer,loss = NLL(),metrics=metrics)\n",
     "model.fit(x_train,y_train,batch_size,validation_split=val_split)"
    ]
   }
